# bonsai-cc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: bench_hook_client.py  bench_journal.py  debug_replay.py  diagnose_garden.py  record-demo.sh
src/bonsai_cc/: __init__.py  __main__.py  cli.py  config.py  log.py  runner.py
src/bonsai_cc/events/: __init__.py  bus.py  journal.py  models.py  watcher.py
src/bonsai_cc/export/: __init__.py  image.py  text.py
src/bonsai_cc/garden/: __init__.py  schema.sql  stats.py  store.py
src/bonsai_cc/growth/: __init__.py  apply.py  attach.py  language.py  lsystem.py  state.py
src/bonsai_cc/hook/: __init__.py  client_template.py  doctor.py  installer.py
src/bonsai_cc/render/: __init__.py  glyphs.py  palette.py  projection.py  seasons.py
src/bonsai_cc/web/: __init__.py  broadcaster.py  pipeline.py  server.py  svg_render.py  themes.py
src/bonsai_cc/web/render/: __init__.py  bamboo.py  banyan.py  birch.py  bonsai.py  canvas.py  ginkgo.py  maple.py  oak.py  old_oak.py  pine.py  sakura.py  tokens.py  willow.py  willow_ts.py
src/bonsai_cc/web/static/: __init__.py  index.html
tests/: conftest.py  test_architectural_seam.py  test_cli_default_flow.py  test_cli_garden.py  test_cli_hooks.py  test_cli_watch.py  test_config.py  test_doctor.py  test_events_parse.py  test_export.py  test_garden_persistence.py  test_garden_roundtrip.py  test_garden_stats.py  test_garden_store.py  test_growth_apply.py  test_growth_attach.py  test_growth_determinism.py  test_growth_language.py  test_growth_state.py  test_hook_client_runtime.py  test_hook_client_static.py  test_hook_installer.py  test_journal.py  test_journal_watcher.py  test_real_session_regression.py  test_render_projection.py  test_render_seasons.py  test_runner.py  test_web_broadcaster.py  test_web_server.py  test_web_svg_render.py  test_web_themes.py
tests/fixtures/: real_session_2026-05-15.jsonl
tests/fixtures/events/: mixed_tools.jsonl  multi_file_session.jsonl  powershell_session.jsonl  simple_session.jsonl
tests/fixtures/snapshots/: mixed_tools.txt  multi_file_session.txt  simple_session.txt
