[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "bonsai-cc"
version = "0.2.5"
description = "A living bonsai that grows in your browser during Claude Code sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Davvik" }]
keywords = ["claude-code", "bonsai", "visualization", "svg", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Software Development",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "structlog>=24.1",
    "pillow>=10.0",
    "aiohttp>=3.9",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
# Reserved for future SVG / GIF export pipelines that need a raster
# fallback (cairosvg). The current SVG / GIF export stubs raise
# ExportError -- this extra is here so a future implementation has a
# pre-declared dependency surface.
svg = ["cairosvg>=2.7"]

[project.scripts]
bonsai-cc = "bonsai_cc.cli:app"

[project.urls]
Homepage = "https://github.com/davvikq/bonsai-cc"
Source = "https://github.com/davvikq/bonsai-cc"
Changelog = "https://github.com/davvikq/bonsai-cc/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bonsai_cc"]
# Non-Python assets shipped inside the wheel (read via importlib.resources).
include = [
    "src/bonsai_cc/**/*.sql",
    "src/bonsai_cc/web/static/*.html",
    "src/bonsai_cc/web/static/*.css",
    "src/bonsai_cc/web/static/*.js",
]
# _build_info.py is .gitignored (it's a build artifact, not source);
# hatchling honours .gitignore in `packages`, so we list it under
# `artifacts` to override that and ship it inside the wheel.
artifacts = ["src/bonsai_cc/_build_info.py"]

[tool.hatch.build.targets.sdist]
# sdist carries everything a user needs to run the test suite from
# source: tests, fixtures, build scripts, README and CHANGELOG.
include = [
    "src/bonsai_cc",
    "tests",
    "scripts",
    "assets",
    "docs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "hatch_build.py",
]
# Freeze the build rev into the sdist so a downstream wheel build
# without git available still reports a real value, not "unknown".
artifacts = ["src/bonsai_cc/_build_info.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # simplify
    "PTH",  # pathlib
    "TID",  # tidy-imports
    "BLE",  # blind-except (we have legitimate broad excepts; require noqa)
    "T20",  # flake8-print (forbid print() in production paths)
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "S101", "T20"]
"scripts/**" = ["T20"]
# hook client is stdlib-only by contract (DESIGN.md §6.4); contextlib
# is technically stdlib but excluded from the allow-list to keep the
# import surface trivial.
"src/bonsai_cc/hook/client_template.py" = ["SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/bonsai_cc"]
# ``render/`` holds the legacy ASCII projection used by the
# ``show`` / ``export --format txt`` paths. The geometry math
# carries a lot of ``Any``-typed cell-array juggling and isn't
# worth retrofitting under ``strict``; everything else in the
# package is.
exclude = ["src/bonsai_cc/render/.*"]

[[tool.mypy.overrides]]
module = ["structlog.*"]
ignore_missing_imports = false
